<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DangkyTaikhoan">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dangky"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/taikhoan"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtdkTK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhaptaikhoan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/matkhau"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtdkMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapmatkhau"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/xnmatkhau"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtdkxacnhanMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhaplaimatkhau"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btndktaoTK"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/dangky" />
</LinearLayout>